# superstore

./: .buildinfo  .copier-answers.yaml  .gitignore  Cargo.toml  Makefile  README.html  README.md  ROADMAP.md  asv.conf.json  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/docs/src/: api.doctree  copulas.doctree  distributions.doctree  ecommerce.doctree  finance.doctree  logs.doctree  retail.doctree  telemetry.doctree  temporal.doctree  timeseries.doctree  weather.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yaml  build.yaml
_modules/: index.html
_modules/superstore/: config.html
_sources/: index.md.txt
_sources/.github/ISSUE_TEMPLATE/: bug_report.md.txt
benchmarks/: index.json  info.json  regressions.xml
docs/src/: api.html  copulas.html  distributions.html  ecommerce.html  finance.html  logs.html  retail.html  telemetry.html  temporal.html  timeseries.html  weather.html
rust/: Cargo.toml
rust/python/: arrow.rs  copulas.rs  crossfilter.rs  distributions.rs  ecommerce.rs  finance.rs  general.rs  logs.rs  temporal.rs  timeseries.rs  weather.rs
rust/src/: arrow.rs  copulas.rs  correlation.rs  crossfilter.rs  distributions.rs  ecommerce.rs  export.rs  finance.rs  general.rs  lib.rs  logs.rs  parallel.rs  streaming.rs  temporal.rs  timeseries.rs  utils.rs  weather.rs
src/: copulas.rs  correlation.rs  crossfilter.rs  export.rs  general.rs  lib.rs  parallel.rs  streaming.rs  temporal.rs  timeseries.rs  weather.rs
src/example/: mod.rs
superstore/: __init__.py  config.py  stubtest_allowlist.txt  superstore.pyi
superstore/benchmarks/: __init__.py  bench_copulas.py  bench_distributions.py  bench_export.py  bench_generators.py  bench_temporal.py
superstore/csp/: crossfilter.py
superstore/tests/: test_arrow_export_correlation.py  test_crossfilter.py  test_distributions.py  test_ecommerce.py  test_parallel.py  test_streaming.py  test_superstore.py  test_vendored.py  test_weather.py
superstore/tests/csp/: test_crossfilter.py
