[package]
name = "superstore_py"
version = "0.2.6"
edition = "2021"
publish = false

[lib]
name = "superstore"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
superstore = { path = "./rust", version = "*" }
pyo3 = { version = "0.27.2", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
chrono = "0.4"

[profile.release]
panic = 'abort'
lto = true

[workspace]
members = [
    "rust",
]
