[package]
name = "superstore_py"
version = "0.3.2"
edition = "2021"
publish = false

[lib]
name = "superstore"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
superstore = { path = "./rust", version = "*" }
pyo3 = { version = "0.28.2", features = ["abi3", "extension-module", "multiple-pymethods"] }
uuid = { version = "1.21", features = ["v4"] }
rand = "0.9"
rand_distr = "0.5"
chrono = "0.4"
rayon = "1.10"
arrow = { version = "53", default-features = false, features = ["ipc"] }
nalgebra = "0.34"

[profile.release]
panic = 'abort'
lto = true

[workspace]
members = [
    "rust",
]
