[package]
name = "superstore_py"
version = "0.3.2"
edition = "2021"
publish = false

[lib]
name = "superstore"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
superstore = { path = "./rust", version = "*" }
pyo3 = { version = "0.29.0", features = ["abi3", "extension-module", "multiple-pymethods"] }
uuid = { version = "1.23", features = ["v4"] }
rand = "0.10"
chrono = "0.4"
arrow = { version = "58", default-features = false, features = ["ipc"] }

[profile.release]
panic = 'abort'
lto = true

[workspace]
members = [
    "rust",
]
